_sass/_layout.scss
body {
    background-color:#FFFFFF;
    background-size:100% auto;
    background-position:center -5vw;
    background-image:url(../img/constellation-3.jpg);
    background-attachment:fixed;
    background-repeat:no-repeat;
    padding-top:40px;
}

@include media-query($on-palm) {
    body {
        padding-top:20px;
    }
}

hr {
    border:0;
    border-bottom: 1px solid $grey-color-light;
    margin:20px 0;
    padding:0;
    height:0;
}

/**
 * Site header
 */

.site-header {
    width:100%;
    background:$background-color;
    border-bottom: 1px solid $grey-color-light;
    position:relative;

    position: -webkit-sticky;
    position: -moz-sticky;
    position: -ms-sticky;
    position: -o-sticky;
    position: sticky;
    top:0;

    transition:all 0.15s ease-out;
    transition-property:font-size, line-height;

    .wrapper {
        position:relative;
    }

    &.fixedsticky-on {
        margin-top:0;
    }

    &.fixedsticky-on {
        margin-top:0;
        font-size:14px;

        .site-title {
            font-size:18px;
            padding-left:35px;
            line-height:35px;
        }

        .site-profile {
            width:45px;
        }

        .site-nav {
            line-height:35px;
        }
    }
}

@include media-query($on-palm) {
    .site-header {

        .site-title {
            font-size:18px;
            padding-left:35px;
            line-height:35px;
        }

        .site-profile {
            width:45px;
        }
    }
}

.site-profile {
    width:80px;
    height:auto;
    display:block;
    border-radius:50%;
    position:absolute;
    transform:translate(-50%, -50%);
    top:50%;
    left:0;
    transition:all 0.15s ease-out;
    transition-property:width;
}

.site-title {
    position:relative;
    padding-left:55px;
    font-size: 26px;
    font-weight: 300;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;
    transition:all 0.15s ease-out;
    transition-property:font-size, line-height, padding-left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the last one
        &:not(:last-child) {
            margin-right: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        top:0;
        right:0;
        background-color: $background-color;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 34px;
            height: 24px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;

            &:not(:last-child) {
                margin-right: 0;
            }
            margin-left: 20px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    background: $background-color;
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

/**
 * Page content
 */
.page-content {
    margin-top:15vw;
    padding: $spacing-unit 0;
    background:$background-color;
    border-top:5px solid $grey-color-dark;
}

.page-heading {
    font-size: 20px;
}

.page-heading-main {
    font-size: 30px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    display: block;
    font-size: 24px;
}



/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }
}

.pagination {
    font-size:18px;
}

.pagination-item {
    padding:10px;

    &.pagination-item-disabled {
        color:$grey-color-light;
    }
}

